--- a/AspNetGame/Views/Shared/_Layout.cshtml
+++ b/AspNetGame/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Accueil", "Index", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("Gestion des rôles", "Index", "Manage", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Gestion des rôles", "Index", "Role", new { area = "" }, null)</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
