Terminated merging login and users management parts with unit templates + Creating the page for naming the player first planet.

--- a/AspNetGame/Content/Site.css
+++ b/AspNetGame/Content/Site.css
@@ -60,3 +60,9 @@ ul {
     text-decoration: line-through;
     font-style: italic;
 }
+
+.planet-card-image {
+    max-width: 150px;
+    object-fit: contain;
+    object-position: center;
+}
