--- a/AspNetGame/Views/Shared/_Layout.cshtml
+++ b/AspNetGame/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using AspNetGame.Models
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -21,17 +22,27 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Unit templates", "Index", "UnitTemplate")</li>
-                    <li>@Html.ActionLink("Resources", "Index", "Resource")</li>
+                    @if (User.IsInRole(RoleConstants.Admin))
+                    {
+                        <li>@Html.ActionLink("Unit templates", "Index", "UnitTemplate")</li>
+                        <li>@Html.ActionLink("Resources", "Index", "Resource")</li>
+                    }
+                    @if (User.IsInRole(RoleConstants.Player))
+                    {
+                        <li>@Html.ActionLink("Planets", "Index", "Planet")</li>
+                        <li>@Html.ActionLink("Buildings", "Index", "Building")</li>
+                    }
                 </ul>
+                @Html.Partial("_LoginPartial")
             </div>
+            
         </div>
     </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Galactic Game</p>
         </footer>
     </div>
 
