--- a/AspNetGame/Views/Shared/_Layout.cshtml
+++ b/AspNetGame/Views/Shared/_Layout.cshtml
@@ -18,7 +18,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Galactic Game", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a href="@Url.Action("Index", "Home")" class="navbar-brand">
+                    <img src="~/Content/Images/logo-white.png" class="header-logo" />
+                    Galactic Game
+                </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
