--- a/AspNetGame/Views/Shared/PlanetCard.cshtml
+++ b/AspNetGame/Views/Shared/PlanetCard.cshtml
@@ -7,5 +7,6 @@
     <h4>@Model.Name</h4>
 
     <img src="@(Model.ImagePath ?? "/Content/Images/noimageavailable.png")" class="planet-card-image" />
+    <button class="btn btn-block">Explore</button>
 </div>
 
