--- a/AspNetGame/Views/Shared/BuildingTypeCard.cshtml
+++ b/AspNetGame/Views/Shared/BuildingTypeCard.cshtml
@@ -6,7 +6,9 @@
 <div>
     <h4>@Model.Name</h4>
 
-    <img src=" @(Model.ImagePath ?? "/Content/Images/noimageavailable.png") " class="building-card-image" width="100px" />
+
+    <img src=" @(Model.ImagePath ?? "/Content/Images/noimageavailable.png") " class="building-card-image unit-image"  />
+    <button>Create</button>
     
 </div>
 
