--- a/AspNetGame/Content/Site.css
+++ b/AspNetGame/Content/Site.css
@@ -122,3 +122,9 @@ ul {
         font-size: 14pt;
         font-weight: bold;
     }
+
+    flex-column {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
