--- a/AspNetGame/Views/Planet/Details.cshtml
+++ b/AspNetGame/Views/Planet/Details.cshtml
@@ -1,13 +1,10 @@
 ﻿@model AspNetGame.Models.Game.Planet
-@using AspNetGame.Models.Game;
-@using AspNetGame.Models.Game.ViewModels;
 @{
     ViewBag.Title = "List of Building Types";
-    ResourcesViewModel resourcesVM = ResourcesViewModel.Build(ViewBag.Player);
 }
 
 <div class="row">
-    @foreach (var Unite in ViewBag.templateNumber)
+    @foreach (var Unite in ViewBag.buildingsCount)
     {
         object unit = Unite.Key;
 
@@ -18,4 +15,4 @@
     }
 </div>
 
-@Html.Partial("ResourcesCounters", resourcesVM)
+@Html.Partial("ResourcesCounters", Model.Player.Resources)
